--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -16,5 +16,5 @@
       <input [(ngModel)]="user.age" placeholder="age"/>
     </label>
   </div>
-
+<button (click)="goBack()">Retour</button>
 </div>
